--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class = "hero">
+		<div class = "image">
+			<img src= "https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+		</div>
+		<div class = "explore">
+			<h2>Welcome to my Pinterest clone</h2>
+			<p>Describe new inpiration and save your favorite class</p>
+			<button>Explore now</button>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
